reorg: project.clj and namespace

--- a/resources/public/templates/game-of-life.html
+++ b/resources/public/templates/game-of-life.html
@@ -7,6 +7,8 @@
       <canvas id="canvas" width="700" height="700"></canvas>
     </div>
     <script type="text/javascript" src="../js/cljs.js"></script>
-    <script type="text/javascript">game_of_life.draw_board(game_of_life.init_random_board(50))</script>
+    <script type="text/javascript">
+      cljs_frp_games.game_of_life.draw_board(cljs_frp_games.game_of_life.init_random_board(50))
+    </script>
   </body>
 </html>
